--- a/chat-front-end/src/Feature/chat/style.css
+++ b/chat-front-end/src/Feature/chat/style.css
@@ -1,88 +1,98 @@
-.messageForm{
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  flex: 1 1;
-  width: 100%;
-  padding: 24px;
-
+.messageForm {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    flex: 1 1;
+    width: 100%;
+    padding: 24px;
+}
+.messageForm > div {
+    width: 95%;
+    background: #eeeeee;
+    padding: 6px;
 }
 
-.chatWrapper{
-  max-height: 90%;
-  overflow: auto;
-  min-height: 70%;
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: column;
-  padding: 12px 24px;
+.messageFormTyping {
+    margin: 0;
+    padding: 6px;
+    background: #eee;
+    border-radius: 4px 4px 0 0;
 }
 
-.messageCenter{
-  display: flex;
-  justify-content: center;
-  margin: 10px 0;
+.chatWrapper {
+    max-height: 90%;
+    overflow: auto;
+    min-height: 70%;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 12px 24px;
 }
 
-.messageCenter p{
-  background: #fff;
-  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, .3);
-  padding: 7px;
-  margin: 0;
-  border-radius: 21px;
-  border: 1px solid #ddd;
-  font-size: 12px;
+.messageCenter {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
 }
 
-.messageLeft{
-  display: flex;
-  justify-content: flex-start;
-  margin: 3px 0;
+.messageCenter p {
+    background: #fff;
+    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.3);
+    padding: 7px;
+    margin: 0;
+    border-radius: 21px;
+    border: 1px solid #ddd;
+    font-size: 12px;
 }
 
-.messageLeft p{
-  margin: 0;
-  padding: 3px 12px;
-  background: #787878b5;
-  color: #fff;
-  font-size: 16px;
-  border-radius: 5px;
-  
-}
-.messageLeft .messageContent{
-  max-width: 45%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 6px 0;
-}
-.messageRight{
-  display: flex;
-  justify-content: flex-end;
-  margin: 3px 0;
-    
+.messageLeft {
+    display: flex;
+    justify-content: flex-start;
+    margin: 3px 0;
 }
 
-.messageRight p{
-  margin: 0;
-  padding: 3px 12px;
-  background: #1777ff;
-  color: #fff;
-  font-size: 16px;
-  border-radius: 5px;
-  
+.messageLeft p {
+    margin: 0;
+    padding: 3px 12px;
+    background: #787878b5;
+    color: #fff;
+    font-size: 16px;
+    border-radius: 5px;
+}
+.messageLeft .messageContent {
+    max-width: 45%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 6px 0;
+}
+.messageRight {
+    display: flex;
+    justify-content: flex-end;
+    margin: 3px 0;
 }
 
-.messageRight .messageContent{
-  max-width: 45%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  margin: 6px 0;
+.messageRight p {
+    margin: 0;
+    padding: 3px 12px;
+    background: #1777ff;
+    color: #fff;
+    font-size: 16px;
+    border-radius: 5px;
 }
 
-.messageContent span{
-  font-size: 10px;
+.messageRight .messageContent {
+    max-width: 45%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin: 6px 0;
+}
+
+.messageContent span {
+    font-size: 10px;
     color: #333;
     margin-top: 2px;
 }
